Fix figure caption spacing

--- a/client/scss/components/_figure.scss
+++ b/client/scss/components/_figure.scss
@@ -39,8 +39,10 @@
 
   display: flex;
   color: color('accessible-grey-2');
+  padding-top: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid color('keyline-grey');
+  margin-bottom: 0.5rem;
 
   .icon {
     width: 1.3em;
